# covenant

./: .gitignore  CLAUDE.md  LICENSE
cli/: CLAUDE.md  pyproject.toml
cli/src/covenant_cli/: errors.py  main.py  output.py
cli/src/covenant_cli/commands/: audit.py  diff.py  generate.py  init.py  publish.py  sign.py  validate.py
cli/src/covenant_cli/data/: covenant.schema.json
cli/src/covenant_cli/models/: spec.py  spec_loader.py
cli/src/covenant_cli/services/: audit_engine.py  diff_engine.py  generator.py  linter.py
cli/tests/: conftest.py
cli/tests/integration/: test_audit.py  test_diff.py  test_sign.py  test_validate.py
cli/tests/integration/fixtures/: deny_overlap.covenant.yaml  missing_budget.covenant.yaml  no_tools.covenant.yaml  unsigned.covenant.yaml  valid.covenant.yaml
cli/tests/unit/: test_audit_engine.py  test_diff_engine.py  test_generator.py  test_linter.py  test_spec_loader.py
docs/superpowers/plans/: 2026-04-01-covenant-cli.md
registry/: CLAUDE.md  pyproject.toml
registry/app/: auth.py  db.py  errors.py  main.py
registry/tests/: conftest.py  test_audit_ingest.py  test_diff.py  test_publish.py  test_search.py  test_verify.py
sdk/python/: CLAUDE.md  pyproject.toml
sdk/python/src/covenant/: __init__.py  audit.py  enforcer.py  errors.py  interceptor.py  invariants.py  loader.py  models.py  validator.py
sdk/python/tests/: conftest.py  test_audit.py  test_enforcer.py  test_errors.py  test_interceptor.py  test_invariants.py
sdk/typescript/: package-lock.json  package.json  tsconfig.json  vitest.config.ts
(+25 files in other folders)
