[project]
name = "covenant-cli"
version = "0.1.0"
description = "Behavioral contract CLI for AI agents"
requires-python = ">=3.12"
dependencies = [
    "typer[all]>=0.12",
    "pyyaml>=6.0",
    "jsonschema>=4.0",
    "pydantic>=2.0",
    "cryptography>=42.0",
    "rich>=13.0",
    "httpx>=0.27",
    "openai>=1.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "mypy>=1.9",
    "ruff>=0.4",
]

[project.scripts]
covenant = "covenant_cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/covenant_cli"]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.mypy]
strict = true
python_version = "3.12"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
