[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "covenant-sdk"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "pyyaml",
    "jsonschema>=4.0",
    "openai>=1.0",
    "cryptography",
    "httpx",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio", "pytest-mock"]

[tool.hatch.build.targets.wheel]
packages = ["src/covenant"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
